FIXED THE STUPID SCROLLBARS

--- a/MannySoots/css/styles.css
+++ b/MannySoots/css/styles.css
@@ -1,5 +1,4 @@
-@import
-url('https://fonts.googleapis.com/css?family=Raleway: 300,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Raleway: 300,400,700,900');
 
 
 * {
@@ -14,7 +13,7 @@ body {
     background-color: #414141
 }
 
-img{
+img {
     max-width: 100%;
     height: auto;
 }
@@ -37,7 +36,7 @@ footer::after {
 =================*/
 
 
-[class^=col-]{
+[class^=col-] {
     width: 100%;
     margin-top: 1em;
 }
@@ -46,8 +45,7 @@ footer::after {
     margin-top: 0;
 }
 
-[class^=col-]
-{
+[class^=col-] {
     float: left;
     padding: 0 .5em;
 }
@@ -55,14 +53,14 @@ footer::after {
 
 
 
-@media (min-width: 40rem){
+@media (min-width: 40rem) {
 
-    [class^=col-]{
+    [class^=col-] {
         float: left;
         padding: 0 .5em;
         margin-top: 0;
     }
-    
+
     [class^=col-]:first-child {
         padding-right: 0;
     }
@@ -71,11 +69,11 @@ footer::after {
         padding-left: 0;
     }
 
-    .col-3{
+    .col-3 {
         width: 50%;
     }
 
-    .col-1{
+    .col-1 {
         width: 16.6666%;
     }
 }
@@ -89,18 +87,18 @@ h1 {
     margin-top: 0;
 }
 
-p{
+p {
     margin-top: 0;
     line-height: 1.5;
 
 }
 
-p:last-of-type{
+p:last-of-type {
     margin-bottom: 0;
 }
 
 
-.title{
+.title {
     font-size: 2.5rem;
     margin-bottom: 1.5em;
     font-weight: 900;
@@ -113,18 +111,18 @@ p:last-of-type{
     font-size: .9em;
 }
 
-.title-cta{
+.title-cta {
     margin: 0 0 .5em;
 }
 
-.unstyled-list{
+.unstyled-list {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
 @media (min-width: 60rem) {
-    .title{
+    .title {
         font-size: 3.7rem;
     }
 }
@@ -142,30 +140,34 @@ p:last-of-type{
     border-style: solid;
     padding: .5em 1.75em;
 }
+
 @media (min-width: 60rem) {
-    .button{
+    .button {
         font-size: 1.5rem;
     }
 }
 
-.button-small{
+.button-small {
     font-size: .7rem;
     font-weight: 700;
 }
 
-.button-accent{
+.button-accent {
     color: #00ff6c;
     border-color: #00ff6c
 }
+
 .button-accent:hover,
 .button-accent:focus {
     background: #00ff6c;
     color: #232323;
 }
-.button-dark{
+
+.button-dark {
     color: #232323;
     border-color: #232323
 }
+
 .button-dark:hover,
 .button-dark:focus {
     background: #232323;
@@ -184,13 +186,13 @@ header {
     margin: 1em;
 }
 
-nav ul{
+nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-nav li{
+nav li {
     display: inline-block;
     margin: 1em;
 }
@@ -210,10 +212,11 @@ nav a:focus {
 }
 
 @media (min-width: 60rem) {
-    .logo{
+    .logo {
         float: left;
     }
-    nav{
+
+    nav {
         float: right;
     }
 }
@@ -227,8 +230,9 @@ nav a:focus {
     padding: 10em 0;
     color: #FFF;
 }
+
 @media (min-width: 60rem) {
-    .home-hero{
+    .home-hero {
         height: 100vw;
         padding-top: 35vh;
     }
@@ -237,10 +241,10 @@ nav a:focus {
 /* home-hero
 =================*/
 
-.home-about-textbox{
+.home-about-textbox {
     background-color: #232323;
     padding: 4em;
-    width: 100vw;
+    width: 105%;
     margin-left: -2.5%;
     outline: 2px solid #00ff6c;
     outline-offset: -2.5em;
@@ -250,7 +254,7 @@ nav a:focus {
 
 }
 
-.home-about-textbox h1{
+.home-about-textbox h1 {
     color: #00ff6c;
     position: absolute;
     left: 50%;
@@ -258,37 +262,38 @@ nav a:focus {
     top: .75em;
     background: #232323;
     padding: 0 .1em;
-    overflow: auto;
 
 }
 
-@media (min-width: 25rem){
-    h1{
+@media (min-width: 25rem) {
+    h1 {
         font-size: 2rem;
     }
 
-    .home-about-textbox h1{
+    .home-about-textbox h1 {
         top: .6em;
         padding: 0 .325em;
     }
 }
-@media (min-width: 60rem){
-    p{  
+
+@media (min-width: 60rem) {
+    p {
         font-size: 1.2rem;
         line-height: 1.6;
     }
 
-    h1{
+    h1 {
         font-size: 2.5rem;
     }
-    .home-about{
+
+    .home-about {
         background-image: url(../img/about-image.jpg);
         background-repeat: no-repeat;
-        background-size: 100%; 
+        background-size: 100%;
         padding-bottom: 10em;
     }
 
-    .home-about-textbox{
+    .home-about-textbox {
 
         width: 50%;
         padding: 7em;
@@ -299,11 +304,10 @@ nav a:focus {
         box-shadow: 0 0 4em rgba(0, 0, 0, 0.4)
     }
 
-    .home-about-textbox h1{
+    .home-about-textbox h1 {
         top: .75em;
         left: 6rem;
         transform: translateX(0)
-       
     }
 }
 
@@ -322,7 +326,7 @@ nav a:focus {
     position: relative;
 }
 
-.port-desc{
+.port-desc {
     position: absolute;
     z-index: 100;
     bottom: 0em;
@@ -333,30 +337,30 @@ nav a:focus {
     padding-bottom: 2em;
 }
 
-.port-desc p{
+.port-desc p {
     margin: 1em;
 }
 
-@media(min-width: 37rem){
-    .port-item{
+@media(min-width: 37rem) {
+    .port-item {
         width: 50%;
         float: left;
-        
+
     }
 }
 
-@media(min-width: 60rem){
-    .port-item{
+@media(min-width: 60rem) {
+    .port-item {
         width: 33.333333333334%;
         overflow: hidden;
-        
+
     }
 
-    .port-desc{
+    .port-desc {
         transform: translateY(150%);
     }
 
-    .port-item:hover .port-desc{
+    .port-item:hover .port-desc {
         transform: translateY(0%)
     }
 }
@@ -364,8 +368,8 @@ nav a:focus {
 /* cta
 =================*/
 
-.cta{
-    
+.cta {
+
     background-color: #00ff6c;
     padding: 5em 0;
 }
@@ -373,9 +377,8 @@ nav a:focus {
 /* footer
 =================*/
 
-footer{
+footer {
     color: #FFF;
     text-align: left;
     padding: 5em 0;
 }
-
